<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="50sp"
        android:fontFamily="@font/righteous"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40px">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="26sp"
                    android:padding="20px"
                    android:text="@string/health_count" />

                <RadioGroup
                    android:id="@+id/health_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/health_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one"
                        android:fontFamily="@font/montserrat"/>

                    <RadioButton
                        android:id="@+id/health_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/three"
                        android:fontFamily="@font/montserrat"/>

                    <RadioButton
                        android:id="@+id/health_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/five"
                        android:fontFamily="@font/montserrat"/>

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="40dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="26sp"
                    android:padding="20px"
                    android:text="@string/clear_score" />

                <android.widget.Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10px"
                    android:id="@+id/clear_score"
                    android:text="clear"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="@color/darkRed"
                    android:textColor="@color/white"
                    android:fontFamily="@font/noto_sans"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>